--- a/manpromanpro/src/main/resources/templates/form-add-developer.html
+++ b/manpromanpro/src/main/resources/templates/form-add-developer.html
@@ -2,14 +2,14 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org">
 
 <head>
-  <meta charset="UTF-8">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
-  <title>Tambah Proyek</title>
+    <meta charset="UTF-8">
+    <object th:include="~{fragments/common :: js}" th:remove="tag"></object>
+    <object th:include="~{fragments/common :: css}" th:remove="tag"></object>
+    <title>Tambah Proyek</title>
 </head>
 
 <body>
+    <nav th:replace="~{fragments/navbar :: navbar}"></nav>
     <div class="container">
         <div class="text-center my-4">
             <h2>Tambah Developer</h2>
@@ -20,10 +20,11 @@
                     <div>
                         <form th:action="@{/developer/add}" th:object="${developerDTO}" method="POST">
                             <div class="row my-3">
-                                <label for="nama-developer" class="col-sm-2 fw-bold col-form-label">Nama Developer</label>
+                                <label for="nama-developer" class="col-sm-2 fw-bold col-form-label">Nama
+                                    Developer</label>
                                 <p class="col-sm-1 fw-bold col-form-label" style="width: 2%">:</p>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" id="nama-developer" th:field="*{nama}"/>
+                                    <input class="form-control" type="text" id="nama-developer" th:field="*{nama}" />
                                 </div>
                             </div>
 
@@ -36,10 +37,12 @@
                             </div>
 
                             <div class="form-group row my-3">
-                                <label for="tanggal-berdiri" class="col-sm-2 fw-bold col-form-label">Tanggal Berdiri</label>
+                                <label for="tanggal-berdiri" class="col-sm-2 fw-bold col-form-label">Tanggal
+                                    Berdiri</label>
                                 <p class="col-sm-1 fw-bold col-form-label" style="width: 2%">:</p>
                                 <div class="col-sm-3">
-                                    <input class="form-control" type="date" id="tanggal-berdiri" th:field="*{tanggalBerdiri}"/>
+                                    <input class="form-control" type="date" id="tanggal-berdiri"
+                                        th:field="*{tanggalBerdiri}" />
                                 </div>
                             </div>
 
@@ -47,7 +50,7 @@
                                 <label for="email" class="col-sm-2 fw-bold col-form-label">Email</label>
                                 <p class="col-sm-1 fw-bold col-form-label" style="width: 2%">:</p>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="email" id="email" th:field="*{email}"/>
+                                    <input class="form-control" type="email" id="email" th:field="*{email}" />
                                 </div>
                             </div>
 
@@ -62,4 +65,5 @@
         </div>
     </div>
 </body>
+
 </html>
