--- a/manpromanpro/src/main/resources/templates/form-update-developer.html
+++ b/manpromanpro/src/main/resources/templates/form-update-developer.html
@@ -3,47 +3,48 @@
 
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"/>
+    <object th:include="~{fragments/common :: js}" th:remove="tag"></object>
+    <object th:include="~{fragments/common :: css}" th:remove="tag"></object>
     <title>Update Developer</title>
 </head>
 
 <body>
-<div class="container">
-    <div class="text-center my-4">
-        <h2>Update Developer</h2>
-    </div>
-    <div class="row justify-content-center">
-        <div class="card" style="width: 40rem;">
-            <div class="card-body">
-                <form th:action="@{/developer/update}" method="post" th:object="${developerDTO}">
-                    <input type="hidden" th:field="*{id}"/>
-                    <div class="mb-3">
-                        <label for="nama" class="form-label">Nama Developer</label>
-                        <input type="text" class="form-control" id="nama" th:field="*{nama}" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="alamat" class="form-label">Alamat Developer</label>
-                        <textarea class="form-control" id="alamat" th:field="*{alamat}" required></textarea>
-                    </div>
-                    <div class="mb-3">
-                        <label for="tanggalBerdiri" class="form-label">Tanggal Berdiri</label>
-                        <input type="date" class="form-control" id="tanggalBerdiri" th:field="*{tanggalBerdiri}" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Email Developer</label>
-                        <input type="email" class="form-control" id="email" th:field="*{email}" required>
-                    </div>
-                    <div class="text-center">
-                        <button type="submit" class="btn btn-primary">Update</button>
-                        <a class="btn btn-secondary" th:href="@{/developer/viewall}">Kembali</a>
-                    </div>
-                </form>                
+    <nav th:replace="~{fragments/navbar :: navbar}"></nav>
+    <div class="container">
+        <div class="text-center my-4">
+            <h2>Update Developer</h2>
+        </div>
+        <div class="row justify-content-center">
+            <div class="card" style="width: 40rem;">
+                <div class="card-body">
+                    <form th:action="@{/developer/update}" method="post" th:object="${developerDTO}">
+                        <input type="hidden" th:field="*{id}" />
+                        <div class="mb-3">
+                            <label for="nama" class="form-label">Nama Developer</label>
+                            <input type="text" class="form-control" id="nama" th:field="*{nama}" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="alamat" class="form-label">Alamat Developer</label>
+                            <textarea class="form-control" id="alamat" th:field="*{alamat}" required></textarea>
+                        </div>
+                        <div class="mb-3">
+                            <label for="tanggalBerdiri" class="form-label">Tanggal Berdiri</label>
+                            <input type="date" class="form-control" id="tanggalBerdiri" th:field="*{tanggalBerdiri}"
+                                required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email Developer</label>
+                            <input type="email" class="form-control" id="email" th:field="*{email}" required>
+                        </div>
+                        <div class="text-center">
+                            <button type="submit" class="btn btn-primary">Update</button>
+                            <a class="btn btn-secondary" th:href="@{/developer/viewall}">Kembali</a>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
-</div>
 </body>
 
 </html>
