--- a/manpromanpro/src/main/resources/templates/form-update-proyek.html
+++ b/manpromanpro/src/main/resources/templates/form-update-proyek.html
@@ -2,14 +2,14 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org">
 
 <head>
-  <meta charset="UTF-8">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
-  <title>Update Proyek</title>
+    <meta charset="UTF-8">
+    <object th:include="~{fragments/common :: js}" th:remove="tag"></object>
+    <object th:include="~{fragments/common :: css}" th:remove="tag"></object>
+    <title>Update Proyek</title>
 </head>
 
 <body>
+    <nav th:replace="~{fragments/navbar :: navbar}"></nav>
     <div class="container">
         <div class="text-center my-4">
             <h2>Update Proyek</h2>
@@ -19,13 +19,14 @@
                 <div class="card-body">
                     <div>
                         <form th:action="@{/proyek/update}" th:object="${proyekDTO}" method="POST">
-                            <input class="form-control" type="hidden" th:field="*{id}" th:value="*{id}"/>
+                            <input class="form-control" type="hidden" th:field="*{id}" th:value="*{id}" />
 
                             <div class="row my-3">
                                 <label for="nama-proyek" class="col-sm-2 fw-bold col-form-label">Nama Proyek</label>
                                 <p class="col-sm-1 fw-bold col-form-label" style="width: 2%">:</p>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" id="nama-proyek" th:field="*{nama}" th:value="*{nama}"/>
+                                    <input class="form-control" type="text" id="nama-proyek" th:field="*{nama}"
+                                        th:value="*{nama}" />
                                 </div>
                             </div>
 
@@ -33,7 +34,8 @@
                                 <label for="deskripsi" class="col-sm-2 fw-bold col-form-label">Deskripsi</label>
                                 <p class="col-sm-1 fw-bold col-form-label" style="width: 2%">:</p>
                                 <div class="col-sm-9">
-                                    <textarea class="form-control" id="deskripsi" th:field="*{deskripsi}" th:value="*{deskripsi}"></textarea>
+                                    <textarea class="form-control" id="deskripsi" th:field="*{deskripsi}"
+                                        th:value="*{deskripsi}"></textarea>
                                 </div>
                             </div>
 
@@ -41,13 +43,16 @@
                                 <label for="tanggal-mulai" class="col-sm-2 fw-bold col-form-label">Tanggal Mulai</label>
                                 <p class="col-sm-1 fw-bold col-form-label" style="width: 2%">:</p>
                                 <div class="col-sm-3">
-                                    <input class="form-control" type="date" id="tanggal-mulai" th:field="*{tanggalMulai}" th:value="*{tanggalMulai}"/>
+                                    <input class="form-control" type="date" id="tanggal-mulai"
+                                        th:field="*{tanggalMulai}" th:value="*{tanggalMulai}" />
                                 </div>
 
-                                <label for="tanggal-selesai" class="col-sm-2 fw-bold col-form-label">Tanggal Selesai</label>
+                                <label for="tanggal-selesai" class="col-sm-2 fw-bold col-form-label">Tanggal
+                                    Selesai</label>
                                 <p class="col-sm-1 fw-bold col-form-label" style="width: 2%">:</p>
                                 <div class="col-sm-3">
-                                    <input class="form-control" type="date" id="tanggal-selesai" th:field="*{tanggalSelesai}" th:value="*{tanggalSelesai}"/>
+                                    <input class="form-control" type="date" id="tanggal-selesai"
+                                        th:field="*{tanggalSelesai}" th:value="*{tanggalSelesai}" />
                                 </div>
                             </div>
 
@@ -57,9 +62,8 @@
                                 <div class="col-sm-3">
                                     <select class="form-control" id="status" th:field="*{status}">
                                         <option value="" disabled selected>Status Proyek...</option>
-                                        <option th:each="status : ${statusLevel}" th:value="${status}" th:text="${status}"
-                                                th:selected="${status} == *{status}"
-                                        ></option>
+                                        <option th:each="status : ${statusLevel}" th:value="${status}"
+                                            th:text="${status}" th:selected="${status} == *{status}"></option>
                                     </select>
                                 </div>
 
@@ -68,9 +72,9 @@
                                 <div class="col-sm-3">
                                     <select class="form-control" id="developer" th:field="*{developer}">
                                         <option value="" disabled selected>Daftar Developer...</option>
-                                        <option th:each="developer: ${listDeveloper}" th:value="${developer.id}" th:text="${developer.nama}"
-                                                th:selected="${developer.id} == *{developer.id}"
-                                        ></option>
+                                        <option th:each="developer: ${listDeveloper}" th:value="${developer.id}"
+                                            th:text="${developer.nama}"
+                                            th:selected="${developer.id} == *{developer.id}"></option>
                                     </select>
                                 </div>
                             </div>
@@ -86,4 +90,5 @@
         </div>
     </div>
 </body>
+
 </html>
