--- a/manpromanpro/src/main/resources/templates/success-delete-proyek.html
+++ b/manpromanpro/src/main/resources/templates/success-delete-proyek.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org">
- 
+
 <head>
-  <meta charset="UTF-8">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
-  <title>Home</title>
+    <meta charset="UTF-8">
+    <object th:include="~{fragments/common :: js}" th:remove="tag"></object>
+    <object th:include="~{fragments/common :: css}" th:remove="tag"></object>
+    <title>Home</title>
 </head>
- 
+
 <body>
+    <nav th:replace="~{fragments/navbar :: navbar}"></nav>
     <div class="container">
         <div class="card m-4 p-4">
             <div class="card-body">
@@ -24,5 +24,5 @@
         </div>
     </div>
 </body>
- 
+
 </html>
