--- a/manpromanpro/src/main/resources/templates/view-developer.html
+++ b/manpromanpro/src/main/resources/templates/view-developer.html
@@ -3,84 +3,89 @@
 
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
+    <object th:include="~{fragments/common :: js}" th:remove="tag"></object>
+    <object th:include="~{fragments/common :: css}" th:remove="tag"></object>
     <title>Detail Developer</title>
 </head>
 
 <body>
-<div class="container">
-    <div class="text-center my-4">
-        <h2>Detail Developer</h2>
-    </div>
-    <div class="row justify-content-center">
-        <div class="card" style="width: 40rem;">
-            <div class="card-body">
-                <div class="row my-4">
-                    <h4 class="card-title text-center" th:text="${developer.nama}"></h4>
-                </div>
+    <nav th:replace="~{fragments/navbar :: navbar}"></nav>
+    <div class="container">
+        <div class="text-center my-4">
+            <h2>Detail Developer</h2>
+        </div>
+        <div class="row justify-content-center">
+            <div class="card" style="width: 40rem;">
+                <div class="card-body">
+                    <div class="row my-4">
+                        <h4 class="card-title text-center" th:text="${developer.nama}"></h4>
+                    </div>
 
-                <div class="row my-3">
-                    <p class="card-text fw-bold col-sm-3">Tanggal Berdiri</p>
-                    <p class="card-text fw-bold col-sm-1" style="width: 2%">:</p>
-                    <p class="card-text col-sm-8" th:text="${#dates.format(developer.tanggalBerdiri, 'dd MMMM yyyy')}"></p>
-                </div>
+                    <div class="row my-3">
+                        <p class="card-text fw-bold col-sm-3">Tanggal Berdiri</p>
+                        <p class="card-text fw-bold col-sm-1" style="width: 2%">:</p>
+                        <p class="card-text col-sm-8"
+                            th:text="${#dates.format(developer.tanggalBerdiri, 'dd MMMM yyyy')}"></p>
+                    </div>
 
-                <div class="row my-3">
-                    <p class="card-text fw-bold col-sm-3">Alamat</p>
-                    <p class="card-text fw-bold col-sm-1" style="width: 2%">:</p>
-                    <p class="card-text col-sm-8" th:text="${developer.alamat}"></p>
-                </div>
+                    <div class="row my-3">
+                        <p class="card-text fw-bold col-sm-3">Alamat</p>
+                        <p class="card-text fw-bold col-sm-1" style="width: 2%">:</p>
+                        <p class="card-text col-sm-8" th:text="${developer.alamat}"></p>
+                    </div>
 
-                <div class="row my-3">
-                    <p class="card-text fw-bold col-sm-3">Email</p>
-                    <p class="card-text fw-bold col-sm-1" style="width: 2%">:</p>
-                    <p class="card-text col-sm-8" th:text="${developer.email}"></p>
-                </div>
+                    <div class="row my-3">
+                        <p class="card-text fw-bold col-sm-3">Email</p>
+                        <p class="card-text fw-bold col-sm-1" style="width: 2%">:</p>
+                        <p class="card-text col-sm-8" th:text="${developer.email}"></p>
+                    </div>
 
-                <div class="row my-3">
-                    <p class="card-text fw-bold col-sm-3">Proyek Yang Dikelola</p>
-                    <p class="card-text fw-bold col-sm-1" style="width: 2%">:</p>
-                    <p class="card-text col-sm-8" th:if="${developer.listProyek == null || #lists.size(developer.listProyek) == 0}">-</p>
-                </div>
+                    <div class="row my-3">
+                        <p class="card-text fw-bold col-sm-3">Proyek Yang Dikelola</p>
+                        <p class="card-text fw-bold col-sm-1" style="width: 2%">:</p>
+                        <p class="card-text col-sm-8"
+                            th:if="${developer.listProyek == null || #lists.size(developer.listProyek) == 0}">-</p>
+                    </div>
 
-                <table th:if="${developer.listProyek != null && #lists.size(developer.listProyek) > 0}" class="table my-3">
-                    <thead>
-                    <tr>
-                        <th scope="col" class="text-center">No. </th>
-                        <th scope="col" class="text-center">Nama Proyek</th>
-                        <th scope="col" class="text-center">Status</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="proyek, stat: ${developer.listProyek}">
-                        <th scope="row" th:text="${stat.index + 1}" class="text-center"></th>
-                        <td th:text="${proyek.nama}" class="text-center"></td>
-                        <td th:text="${proyek.status}" class="text-center"></td>
-                    </tr>
-                    </tbody>
-                </table>
+                    <table th:if="${developer.listProyek != null && #lists.size(developer.listProyek) > 0}"
+                        class="table my-3">
+                        <thead>
+                            <tr>
+                                <th scope="col" class="text-center">No. </th>
+                                <th scope="col" class="text-center">Nama Proyek</th>
+                                <th scope="col" class="text-center">Status</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr th:each="proyek, stat: ${developer.listProyek}">
+                                <th scope="row" th:text="${stat.index + 1}" class="text-center"></th>
+                                <td th:text="${proyek.nama}" class="text-center"></td>
+                                <td th:text="${proyek.status}" class="text-center"></td>
+                            </tr>
+                        </tbody>
+                    </table>
 
-                <div class="row my-3">
-                    <p class="card-text fw-bold col-sm-3">Waktu Dibentuk</p>
-                    <p class="card-text fw-bold col-sm-1" style="width: 2%">:</p>
-                    <p class="card-text col-sm-8" th:text="${#dates.format(developer.createdAt, 'dd MMMM yyyy HH:mm')}"></p>
-                </div>
+                    <div class="row my-3">
+                        <p class="card-text fw-bold col-sm-3">Waktu Dibentuk</p>
+                        <p class="card-text fw-bold col-sm-1" style="width: 2%">:</p>
+                        <p class="card-text col-sm-8"
+                            th:text="${#dates.format(developer.createdAt, 'dd MMMM yyyy HH:mm')}"></p>
+                    </div>
 
-                <div class="row my-3">
-                    <p class="card-text fw-bold col-sm-3">Terakhir Diubah</p>
-                    <p class="card-text fw-bold col-sm-1" style="width: 2%">:</p>
-                    <p class="card-text col-sm-8" th:text="${#dates.format(developer.updatedAt, 'dd MMMM yyyy HH:mm')}"></p>
-                </div>
+                    <div class="row my-3">
+                        <p class="card-text fw-bold col-sm-3">Terakhir Diubah</p>
+                        <p class="card-text fw-bold col-sm-1" style="width: 2%">:</p>
+                        <p class="card-text col-sm-8"
+                            th:text="${#dates.format(developer.updatedAt, 'dd MMMM yyyy HH:mm')}"></p>
+                    </div>
 
-                <div class="text-center m-3">
-                    <a type="button" class="btn btn-primary btn-md" href="/developer/viewall">Kembali</a>
+                    <div class="text-center m-3">
+                        <a type="button" class="btn btn-primary btn-md" href="/developer/viewall">Kembali</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 </body>
 
 </html>
