--- a/manpromanpro/src/main/resources/templates/view-proyek.html
+++ b/manpromanpro/src/main/resources/templates/view-proyek.html
@@ -3,74 +3,79 @@
 
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
+    <object th:include="~{fragments/common :: js}" th:remove="tag"></object>
+    <object th:include="~{fragments/common :: css}" th:remove="tag"></object>
     <title>Detail Proyek</title>
 </head>
 
 <body>
-<div class="container">
-    <div class="text-center my-4">
-        <h2>Detail Proyek</h2>
-    </div>
-    <div class="row justify-content-center">
-        <div class="card" style="width: 40rem;">
-            <div class="card-body">
-                <div class="row my-4">
-                    <h4 class="card-title text-center" th:text="${proyek.nama}"></h4>
-                </div>
+    <nav th:replace="~{fragments/navbar :: navbar}"></nav>
+    <div class="container">
+        <div class="text-center my-4">
+            <h2>Detail Proyek</h2>
+        </div>
+        <div class="row justify-content-center">
+            <div class="card" style="width: 40rem;">
+                <div class="card-body">
+                    <div class="row my-4">
+                        <h4 class="card-title text-center" th:text="${proyek.nama}"></h4>
+                    </div>
 
-                <div class="row my-3">
-                    <p class="card-text fw-bold col-sm-3">Deskripsi</p>
-                    <p class="card-text fw-bold col-sm-1" style="width: 2%">:</p>
-                    <p class="card-text col-sm-8" th:text="${proyek.deskripsi}"></p>
-                </div>
+                    <div class="row my-3">
+                        <p class="card-text fw-bold col-sm-3">Deskripsi</p>
+                        <p class="card-text fw-bold col-sm-1" style="width: 2%">:</p>
+                        <p class="card-text col-sm-8" th:text="${proyek.deskripsi}"></p>
+                    </div>
 
-                <div class="row my-3">
-                    <p class="card-text fw-bold col-sm-3">Tanggal Mulai</p>
-                    <p class="card-text fw-bold col-sm-1" style="width: 2%">:</p>
-                    <p class="card-text col-sm-8" th:text="${#dates.format(proyek.tanggalMulai, 'dd MMMM yyyy')}"></p>
-                </div>
+                    <div class="row my-3">
+                        <p class="card-text fw-bold col-sm-3">Tanggal Mulai</p>
+                        <p class="card-text fw-bold col-sm-1" style="width: 2%">:</p>
+                        <p class="card-text col-sm-8" th:text="${#dates.format(proyek.tanggalMulai, 'dd MMMM yyyy')}">
+                        </p>
+                    </div>
 
-                <div class="row my-3">
-                    <p class="card-text fw-bold col-sm-3">Tanggal Selesai</p>
-                    <p class="card-text fw-bold col-sm-1" style="width: 2%">:</p>
-                    <p class="card-text col-sm-8" th:text="${#dates.format(proyek.tanggalSelesai, 'dd MMMM yyyy')}"></p>
-                </div>
+                    <div class="row my-3">
+                        <p class="card-text fw-bold col-sm-3">Tanggal Selesai</p>
+                        <p class="card-text fw-bold col-sm-1" style="width: 2%">:</p>
+                        <p class="card-text col-sm-8" th:text="${#dates.format(proyek.tanggalSelesai, 'dd MMMM yyyy')}">
+                        </p>
+                    </div>
 
-                <div class="row my-3">
-                    <p class="card-text fw-bold col-sm-3">Status</p>
-                    <p class="card-text fw-bold col-sm-1" style="width: 2%">:</p>
-                    <p class="card-text col-sm-8" th:text="${proyek.status}"></p>
-                </div>
+                    <div class="row my-3">
+                        <p class="card-text fw-bold col-sm-3">Status</p>
+                        <p class="card-text fw-bold col-sm-1" style="width: 2%">:</p>
+                        <p class="card-text col-sm-8" th:text="${proyek.status}"></p>
+                    </div>
 
-                <div class="row my-3">
-                    <p class="card-text fw-bold col-sm-3">Nama Developer</p>
-                    <p class="card-text fw-bold col-sm-1" style="width: 2%">:</p>
-                    <p class="card-text col-sm-8" th:if="${proyek.developer != null}" th:text="${proyek.developer.nama}"></p>
-                    <p class="card-text col-sm-8" th:if="${proyek.developer == null}">-</p>
-                </div>
+                    <div class="row my-3">
+                        <p class="card-text fw-bold col-sm-3">Nama Developer</p>
+                        <p class="card-text fw-bold col-sm-1" style="width: 2%">:</p>
+                        <p class="card-text col-sm-8" th:if="${proyek.developer != null}"
+                            th:text="${proyek.developer.nama}"></p>
+                        <p class="card-text col-sm-8" th:if="${proyek.developer == null}">-</p>
+                    </div>
 
-                <div class="row my-3">
-                    <p class="card-text fw-bold col-sm-3">Waktu Dibentuk</p>
-                    <p class="card-text fw-bold col-sm-1" style="width: 2%">:</p>
-                    <p class="card-text col-sm-8" th:text="${#dates.format(proyek.createdAt, 'dd MMMM yyyy HH:mm')}"></p>
-                </div>
+                    <div class="row my-3">
+                        <p class="card-text fw-bold col-sm-3">Waktu Dibentuk</p>
+                        <p class="card-text fw-bold col-sm-1" style="width: 2%">:</p>
+                        <p class="card-text col-sm-8"
+                            th:text="${#dates.format(proyek.createdAt, 'dd MMMM yyyy HH:mm')}"></p>
+                    </div>
 
-                <div class="row my-3">
-                    <p class="card-text fw-bold col-sm-3">Terakhir Diubah</p>
-                    <p class="card-text fw-bold col-sm-1" style="width: 2%">:</p>
-                    <p class="card-text col-sm-8" th:text="${#dates.format(proyek.updatedAt, 'dd MMMM yyyy HH:mm')}"></p>
-                </div>
+                    <div class="row my-3">
+                        <p class="card-text fw-bold col-sm-3">Terakhir Diubah</p>
+                        <p class="card-text fw-bold col-sm-1" style="width: 2%">:</p>
+                        <p class="card-text col-sm-8"
+                            th:text="${#dates.format(proyek.updatedAt, 'dd MMMM yyyy HH:mm')}"></p>
+                    </div>
 
-                <div class="text-center m-3">
-                    <a type="button" class="btn btn-primary btn-md" href="/proyek/viewall">Kembali</a>
+                    <div class="text-center m-3">
+                        <a type="button" class="btn btn-primary btn-md" href="/proyek/viewall">Kembali</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 </body>
 
 </html>
